==Stream Powerup!== - Handmade preloader for stream to avoid the broken layout before javascript/jQuery loads. - Updated and cleaned out the todo page. - Handmade stream notice system (replaces sidebar). - Any of your status updates now say "You". - Any of your status updates have a darker border.
- Scripts now moved to header, because it's continued to cause loading issues.
Some have remained in the footer because they're used on one or two pages..
- Other minor changes to styles, layout, etc.

git-svn-id: https://subversion.assembla.com/svn/mapler-me@413 7cbc8f23-9b70-4854-b091-be65f742de0c

--- a/trunk/website/inc/css/style.css
+++ b/trunk/website/inc/css/style.css
@@ -95,7 +95,7 @@ html { overflow-x: hidden; }
 	hyphens:auto
 }
 
-.status {
+.status, .status-loading {
 	overflow:hidden;
 	color:#666;
 	padding:10px;
@@ -141,6 +141,10 @@ html { overflow-x: hidden; }
 
 .notification {
 	border: 1px dashed rgba(0,0,0,0.5);
+}
+
+.postplox {
+	border: 1px solid rgba(0,0,0,0.7);
 }
 
 /* Fixes for different layouts */
